# kyros-dashboard

./: .coderabbit.yaml  .commitlintrc.js  .coverage  .cursorignore  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  E2E_AUDIT.md  MODULAR_README.md  PR_BODY_MERGE_BATCH.md  PR_BODY_T-018.md  PR_BODY_T-020.md  RAILWAY_SETUP.md  README.md  ROADMAP.md  TEST_USER_GUIDE.md  agents.md  architect-go.md  branch-protection-with-checks.json  docker-compose.test.yml  feedback.md  package-lock.json  pr22_comment.md  pr_comments_summary.md  run-tests.sh  safety-report.json  setup-branch-protection.sh  setup-dev.sh  setup.sh  start-both.sh  test-local.sh  test-plan.yml  token_usage.json  usage-events-2025-09-04.csv
backend/: .bandit  .coverage  .env.production.template  .env.staging.template  .gitignore  Dockerfile.test  PHASE_B_README.md  README.md  __init__.py  alembic.ini  api.py  bandit-report.json  conftest.py  coverage.xml  env.test  generator.py  main.py  main_old.py  pyproject.toml  pytest-report.xml  railway.json  render.yaml  requirements.txt  start.sh  start_dev.sh  test_api_endpoints.py  test_api_endpoints.py.disabled  test_observability.py  test_observability_simple.py  test_stress.py  test_utils.py  test_utils.py.disabled  token_usage.json
backend/alembic/: env.py
backend/core/: __init__.py  auth.py  auth_router.py  config.py  database.py  error_handling.py  file_handlers.py  input_validation.py  logging.py  models.py  openai_client.py  security.py
backend/core/auth/: dependencies.py  (+4 more)
backend/middleware/: rate_limiter.py
backend/tests/: agent_context.py  conftest.py  test_api_endpoints.py  test_generator.py  test_generator.py.disabled  test_healthz.py  test_quotas.py  test_rate_limiter.py  test_token_storage.py  test_user_model.py
backend/tools/: __init__.py  registry.py
backend/utils/: quotas.py  token_storage.py  token_utils.py
mcp/: Dockerfile.mcp  README.md  __init__.py  base_jsonrpc.py  coderabbit_server.py  env.py  kyros_collab_server.py  linear_server.py  mcp.config.example.json  pyproject.toml  railway_server.py  vercel_server.py
mcp/tests/: test_collab.py
(+476 files in other folders)
