[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sentry-sdk[fastapi]>=1.38.0",
    "posthog>=3.0.0",
    "pyjwt>=2.8.0",
    "bleach>=6.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "openai>=1.3.0",
    "slowapi>=0.1.9",
    "fastapi-mail>=1.4.0",
    "boto3>=1.34.0",
    "celery>=5.3.0",
    "celery[redis]>=5.3.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.6.0"
detect-secrets = ">=1.4.0"
bandit = ">=1.7.5"
black = ">=24.1.1"
ruff = ">=0.1.8"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.0"
httpx = ">=0.25.0"
aiohttp = ">=3.9.0"
