[project]
name = "kyros-mcp"
version = "0.1.0"
description = "MCP servers: collaboration (kyros-collab) + integration stubs"
authors = [{name = "Kyros", email = "dev@kyros.local"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "jsonschema>=4.19.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
kyros-collab-mcp = "mcp.kyros_collab_server:main"
mcp-linear = "mcp.linear_server:main"
mcp-railway = "mcp.railway_server:main"
mcp-vercel = "mcp.vercel_server:main"
mcp-coderabbit = "mcp.coderabbit_server:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include the current directory as the package root since this pyproject
# lives alongside the Python package (module name: "mcp").
packages = ["."]
